# UnityHypernet

./: .gitignore  AI-BOOT-SEQUENCE.md  CONTRIBUTING.md  PUBLIC-ALPHA-RELEASE.md  README.md  requirements.txt
Hypernet Structure/0/0.1 - Hypernet Core/: .gitignore  CONTRIBUTOR-GUIDE.md  MORNING-PLAN.md  README.md  REGISTRY.md  STATUS-UPDATE-2026-02-16.md  SWARM-IMPROVEMENT-PLAN.md  SWARM-SETUP-GUIDE.md  TEST-BASELINE.md  TEST-SPLIT-PROPOSAL.md  VM-SETUP-DEBIAN.md  add_frontmatter.py  bootstrap.py  demo.py  import_structure.py  install.bat  install.sh  launch.bat  launch.sh  pyproject.toml  reputation_backfill.json  requirements.txt  secrets.template.json  swarm_config.example.json  test_hypernet.py  test_integration.py  test_lmstudio.py  test_vault.py
Hypernet Structure/0/0.1 - Hypernet Core/.claude/: settings.local.json
Hypernet Structure/0/0.1 - Hypernet Core/0.1.0 - Planning & Documentation/: AI-COFOUNDER-COLLABORATION.md  AI-COFOUNDER-COMPLETE-REFLECTION.md  AI-PARTNERSHIP-STRATEGY.md  API-COMPLETION-SUMMARY.md  BEGINNER-PROGRAMMER-2WEEK-SPRINT.md  COMPETITIVE-ANALYSIS.md  COMPLETE-STATUS-REPORT.md  DEMO-VIDEO-PRODUCTION-GUIDE.md  DEVELOPMENT-PRIORITIES.md  FINANCIAL-MODEL.md  FINANCIAL-PROJECTIONS-5YEAR.md  FIRST-10-EMAILS-PERSONALIZED.md  FUNDING-EXECUTIVE-SUMMARY.md  FUNDING-STRATEGY-2026.md  GO-TO-MARKET-STRATEGY.md  IMPLEMENTATION-STATUS.md  INVESTOR-EMAILS-READY-TO-SEND.md  INVESTOR-OUTREACH-KIT.md  INVESTOR-PITCH-PLAYBOOK.md  INVESTOR-TRACKING-TEMPLATE.md  MASTER-INDEX.md  ONE-PAGER-INVESTOR.md  OVERNIGHT-WORK-SUMMARY.md  PITCH-DECK-CONTENT.md  PITCH-DECK-DETAILED.md  PRODUCT-ROADMAP-2026-2028.md  READ-THIS-FIRST-MATT.md  README.md  RUNWAY-ML-PROMPTS-READY.md  TECHNICAL-ARCHITECTURE.md  THE-HYPERNET-COMPACT.md  WHAT-WE-BUILT-COMPLETE-SUMMARY.md  code-metadata-README.md
Hypernet Structure/0/0.1 - Hypernet Core/0.1.1 - Core Hypernet/: pyproject.toml
Hypernet Structure/0/0.1 - Hypernet Core/0.1.1 - Core System/: .env.example  ALIGNMENT-STATUS.md  API-IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION-PROGRESS.md  MVP-DATABASE-SCHEMA.sql  README.md  UNITY-QUEST3-QUICKSTART.md  UNITY-START-TODAY.md  api.py
Hypernet Structure/0/0.1 - Hypernet Core/0.1.2 - API Layer/: README.md
Hypernet Structure/0/0.1 - Hypernet Core/0.1.3 - Database Layer/: README.md
Hypernet Structure/0/0.1 - Hypernet Core/0.1.4 - Integration Plugins/: README.md
Hypernet Structure/0/0.1 - Hypernet Core/0.1.6 - AI Core & Identity System/: README.md
Hypernet Structure/0/0.1 - Hypernet Core/0.1.7 - AI Swarm/: README.md
Hypernet Structure/0/0.1 - Hypernet Core/0.1.8 - Quest VR/: UNITY-QUEST3-QUICKSTART.md  UNITY-START-TODAY.md  WEBXR-STATUS.md
Hypernet Structure/0/0.1 - Hypernet Core/docs/: ACCESS-CONTROL-MODEL.md  AI-NERVOUS-SYSTEM.md  DATABASE-FIRST-REDESIGN.md  DELL-SERVER-SETUP.md  (+6 more)
Hypernet Structure/0/0.1.7 - AI Swarm/: pyproject.toml
Hypernet Structure/0/0.1.8 - Quest VR/: WEBXR-STATUS.md  pyproject.toml
(+33604 files in other folders)
