[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hypernet-core"
version = "0.1.0"
description = "Hypernet Core — Data model library for the Hypernet"
requires-python = ">=3.9"

[project.optional-dependencies]
server = ["fastapi", "uvicorn"]

[tool.setuptools.packages.find]
include = ["hypernet*"]
